added arraybubbles, bubble jumping, bubble-click-disappear and js-objects projects

--- a/p5-basics/index.html
+++ b/p5-basics/index.html
@@ -7,7 +7,7 @@
     <script src="libs/p5.js"></script>
     <script src="libs/p5.dom.js"></script>
     <script src="libs/p5.sound.js"></script>
-    <script src="function_parameters.js"></script>
+    <script src="bubble-bumping.js"></script>
   </head>
   <body>
   </body>
